--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -1,12 +1,16 @@
-## Process this file with automake to produce Makefile.in
+## Makefile.am -- Process this file with automake to produce Makefile.in
 ##
-## Copyright (C) 1998, 1999, 2000, 2001, 2003, 2004, 2005
-## Free Software Foundation, Inc.
+## Copyright (C) 2003, 2004, 2005 Free Software Foundation, Inc.
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
 ## the Free Software Foundation; either version 2 of the License, or
 ## (at your option) any later version.
+##
+## As a special exception to the GNU Lesser General Public License,
+## if you distribute this file as part of a program or library that
+## is built using GNU libtool, you may include it under the same
+## distribution terms that you use for the rest of that program.
 ##
 ## This program is distributed in the hope that it will be useful,
 ## but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -17,25 +21,28 @@
 ## along with this program; see the file COPYING.  If not, write to
 ## the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
 ## Boston, MA 02110-1301, USA.
-
-BUILT_SOURCES		=
-MOSTLYCLEANFILES	=
-EXTRA_DIST		= configure.ac
-
-AUTOMAKE_OPTIONS	= foreign
-ACLOCAL_AMFLAGS		= -I m4
+ACLOCAL_AMFLAGS = -I m4
+AUTOMAKE_OPTIONS = foreign
+BUILT_SOURCES =
+EXTRA_DIST =
+CLEANFILES =
+MOSTLYCLEANFILES =
+# ### BEGIN Makefile.am
 
 DEFS			= -DHAVE_CONFIG_H="<$(CONFIG_H)>" -DLTDL
-AM_CPPFLAGS		= -I. -I$(srcdir) -I$(srcdir)/libltdl
+AM_CPPFLAGS		= -I. -Ilibltdl -I$(srcdir)/libltdl \
+			  -I$(srcdir)/libltdl
 AM_LDFLAGS		= -no-undefined
 VERSION_INFO		= -version-info 6:0:0
 
 noinst_LTLIBRARIES	= $(LT_DLLOADERS)
 
 if INSTALL_LTDL
-nobase_include_HEADERS	= ltdl.h \
-			  libltdl/lt_system.h libltdl/lt_error.h \
+ltdlincludedir		= $(includedir)/libltdl
+ltdlinclude_HEADERS	= libltdl/lt_system.h \
+			  libltdl/lt_error.h \
 			  libltdl/lt_dlloader.h
+include_HEADERS		= ltdl.h
 lib_LTLIBRARIES		= libltdl.la
 endif
 
@@ -43,30 +50,30 @@ if CONVENIENCE_LTDL
 noinst_LTLIBRARIES     += libltdlc.la
 endif
 
-## !!NOTE!! Be sure to update ../Makefile.am:ltdldatafiles if you
-##          make any changes here:
-libltdl_la_SOURCES	= libltdl/lt__alloc.h \
+libltdl_la_SOURCES = libltdl/lt__alloc.h \
 			  libltdl/lt__dirent.h \
 			  libltdl/lt__glibc.h \
 			  libltdl/lt__private.h \
-                          libltdl/lt__strl.h \
+			  libltdl/lt__strl.h \
 			  libltdl/lt_dlloader.h \
 			  libltdl/lt_error.h \
-                          libltdl/lt_system.h \
+	                  libltdl/lt_system.h \
 			  libltdl/slist.h \
 			  loaders/preopen.c \
 			  lt__alloc.c \
 			  lt_dlloader.c \
 			  lt_error.c \
-			  ltdl.c ltdl.h \
+			  ltdl.c \
+			  ltdl.h \
 			  slist.c
-libltdl_la_CPPFLAGS	= -DLTDLOPEN=$(LTDLOPEN) $(AM_CPPFLAGS)
+
+libltdl_la_CPPFLAGS	= -DLTDLOPEN=libltdl $(AM_CPPFLAGS)
 libltdl_la_LDFLAGS	= $(AM_LDFLAGS) $(VERSION_INFO) $(LT_DLPREOPEN)
 libltdl_la_LIBADD	= $(LTLIBOBJS)
-libltdl_la_DEPENDENCIES	= $(LT_DLLOADERS) $(LTLIBOBJS) $(BUILT_SOURCES)
+libltdl_la_DEPENDENCIES	= $(LT_DLLOADERS) $(LTLIBOBJS)
 
 libltdlc_la_SOURCES	= $(libltdl_la_SOURCES)
-libltdlc_la_CPPFLAGS	= -DLTDLOPEN=$(LTDLOPEN)c $(AM_CPPFLAGS)
+libltdlc_la_CPPFLAGS	= -DLTDLOPEN=libltdlc $(AM_CPPFLAGS)
 libltdlc_la_LDFLAGS	= $(AM_LDFLAGS) $(LT_DLPREOPEN)
 libltdlc_la_LIBADD	= $(libltdl_la_LIBADD)
 libltdlc_la_DEPENDENCIES= $(libltdl_la_DEPENDENCIES)
@@ -75,8 +82,12 @@ libltdlc_la_DEPENDENCIES= $(libltdl_la_DEPENDENCIES)
 ## pic-objects (either as a shared library, or a convenience library),
 ## so the loaders themselves must be made from pic-objects too.  We
 ## use convenience libraries for that purpose:
-EXTRA_LTLIBRARIES	= dlopen.la dld_link.la dyld.la load_add_on.la \
-			  loadlibrary.la shl_load.la
+EXTRA_LTLIBRARIES		= dlopen.la \
+				  dld_link.la \
+				  dyld.la \
+				  load_add_on.la \
+				  loadlibrary.la \
+				  shl_load.la
 
 dlopen_la_SOURCES	= loaders/dlopen.c
 dlopen_la_LDFLAGS	= -module -avoid-version
@@ -100,16 +111,21 @@ shl_load_la_LDFLAGS	= -module -avoid-version
 shl_load_la_LIBADD	= $(LIBADD_SHL_LOAD)
 
 ## Make sure these will be cleaned even when they're not built by default:
-CLEANFILES		= libltdl.la libltdlc.la libdlloader.la
+CLEANFILES		       += libltdl.la \
+				  libltdlc.la \
+				  libdlloader.la
+
+## Automake-1.9.6 doesn't clean subdir AC_LIBOBJ compiled objects
+## automatically:
+CLEANFILES		       += $(LIBOBJS) $(LTLIBOBJS)
 
 
 ## --------------------------- ##
 ## Gnulib Makefile.am snippets ##
 ## --------------------------- ##
 
-## ((( gnulib module argz
-BUILT_SOURCES += $(ARGZ_H)
-EXTRA_DIST += argz_.h
+BUILT_SOURCES	+= $(ARGZ_H)
+EXTRA_DIST	+= argz_.h
 
 # We need the following in order to create an <argz.h> when the system
 # doesn't have one that works with the given compiler.
@@ -117,5 +133,7 @@ all-local $(lib_OBJECTS): $(ARGZ_H)
 argz.h: argz_.h
 	cp $(srcdir)/argz_.h $@-t
 	mv $@-t $@
-MOSTLYCLEANFILES += argz.h argz.h-t
-## ))) gnulib module argz
+MOSTLYCLEANFILES += argz.h \
+		    argz.h-t
+
+# ### END Makefile.am
