--- a/tests/mdemo/Makefile.am
+++ b/tests/mdemo/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile.am -- Process this file with automake to produce Makefile.in
 ##
-## Copyright (C) 2003, 2004 Free Software Foundation
+## Copyright (C) 2003, 2004, 2005 Free Software Foundation
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
 ## Boston, MA 02110-1301, USA.
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
-ACLOCAL_AMFLAGS  = -I ../../m4
+ACLOCAL_AMFLAGS  = -I ../../libltdl/m4
 AM_CPPFLAGS	 = -I$(top_srcdir)/../.. $(INCLTDL)
 
 lib_LTLIBRARIES = libsub.la foo1.la libfoo2.la libmlib.la
@@ -49,7 +49,7 @@ top_distdir = ../..
 @LIBLTDL@: $(top_distdir)/libtool $(top_distdir)/libltdl/libtool \
     $(top_distdir)/libltdl/config.h $(srcdir)/$(top_distdir)/libltdl/ltdl.c \
     $(srcdir)/$(top_distdir)/libltdl/ltdl.h
-	(cd $(top_distdir)/libltdl; $(MAKE) `echo $(LIBLTDL) | sed 's,.*\.\./libltdl/,,g'`)
+	(cd $(top_distdir); $(MAKE) `echo $(LIBLTDL) | sed 's,.*\.\./libltdl/,libltdl/,g'`)
 # Without the following line, the check may fail if libltdl/libtool is
 # removed after libltdl is configured
 $(top_distdir)/libltdl/libtool $(top_distdir)/libltdl/config.h:
