Allow for portability with Autoconf 2.59, Automake 1.9.6, which lack AC_CONFIG_LIBOBJ_DIR support.
* bootstrap: Unless environment variable WORKING_LIBOBJS_SUPPORT
is set to true aka `:', symlink ..
* argz.c lt__dirent.c lt__strl.c: .. these from the copies in
libltdl.
* configure.ac (SUBDIR_LIBOBJS): Automake conditional, set if
bootstrap didn't make the extra copies of libobj sources in
top srcdir...
* Makefile.am: Add these to EXTRA_DIST if SUBDIR_OBJS is not set,
as well as the originals in libltdl/, in order to work when
bootstrapped both with old and newer Automake/Autoconf.

--- a/configure.ac
+++ b/configure.ac
@@ -123,6 +123,13 @@ AC_SUBST([M4SH], ['$(AUTOM4TE) --language=m4sh'])
 dnl Make sure config.status is regenerated when the version timestamp changes
 AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_srcdir)/stamp-vcl'])
 
+dnl automake-1.9.x or autoconf-2.59 don't support subdir libobjs
+AC_MSG_CHECKING([whether subdir libobjs are useable])
+test -f $srcdir/argz.c || sublibobjs_supported=yes
+AM_CONDITIONAL([SUBDIR_LIBOBJS], test x"${sublibobjs_supported-no}" != xno)
+AC_MSG_RESULT([${sublibobjs_supported-no}])
+
+
 ## ------------------------------- ##
 ## Libtool specific configuration. ##
 ## ------------------------------- ##
