--- a/Makefile.am
+++ b/Makefile.am
@@ -335,6 +335,15 @@ MOSTLYCLEANFILES += libltdl/argz.h \
 
 # %%% END libltdl/Makefile.am
 
+if ! SUBDIR_LIBOBJS
+## workaround for Autoconf 2.59, Automake 1.9.6:
+## we include these files twice, because of missing LIBOBJDIR support.
+EXTRA_DIST += \
+	argz.c libltdl/argz.c \
+	lt__dirent.c libltdl/lt__dirent.c \
+	lt__strl.c libltdl/lt__strl.c
+endif
+
 
 ## -------------- ##
 ## Documentation. ##
