* Makefile.am (doc/notes.txt): Use --no-headers instead of --plaintext for makeinfo. Reported by Peter O'Gorman <peter@pogma.com>.

--- a/Makefile.am
+++ b/Makefile.am
@@ -357,7 +357,7 @@ all-local: $(srcdir)/doc/notes.txt
 
 $(srcdir)/doc/notes.txt: $(srcdir)/doc/notes.texi
 	cd $(srcdir)/doc && \
-	  $(MAKEINFO) --plaintext $(MAKEINFOFLAGS) -o notes.txt notes.texi
+	  $(MAKEINFO) --no-headers $(MAKEINFOFLAGS) -o notes.txt notes.texi
 
 
 ## ------------- ##
