* Makefile.am (TESTS_ENVIRONMENT): Export SHELL. * bootstrap (SHELL): Set to $CONFIG_SHELL or /bin/sh. Name `make' targets in portable fashion.  Work around `rm' warnings.  Unconditionally create fake `libtoolize'. Reported by Patrick Welche <prlw1@newn.cam.ac.uk>.

--- a/Makefile.am
+++ b/Makefile.am
@@ -480,7 +480,8 @@ EXTRA_DIST     += $(TESTSUITE) $(TESTSUITE_AT) tests/package.m4
 TESTS_ENVIRONMENT = MAKE="$(MAKE)" CC="$(CC)" CFLAGS="$(CFLAGS)" \
 	CPP="$(CPP)" CPPFLAGS="$(CPPFLAGS)" LD="$(LD)" LDFLAGS="$(LDFLAGS)" \
 	LIBS="$(LIBS)" LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
-	OBJEXT="$(OBJEXT)" EXEEXT="$(EXEEXT)" CONFIG_SHELL="$(SHELL)" \
+	OBJEXT="$(OBJEXT)" EXEEXT="$(EXEEXT)" \
+	SHELL="$(SHELL)" CONFIG_SHELL="$(SHELL)" \
 	CXX="$(CXX)" CXXFLAGS="$(CXXFLAGS)" CXXCPP="$(CXXCPP)" \
 	F77="$(F77)" FFLAGS="$(FFLAGS)" \
 	FC="$(FC)" FCFLAGS="$(FCFLAGS)" \
