* ltmain.in (link mode): Actually provide a useful error message.  Fixes long-standing shameful user neglection. Reported by Martin Paljak <martin.paljak@gmail.com>.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2194,7 +2194,7 @@ EOF
 	esac # case $deplib
 	if test "$found" = yes || test -f "$lib"; then :
 	else
-	  $echo "$modename: cannot find the library \`$lib'" 1>&2
+	  $echo "$modename: cannot find the library \`$lib' or unhandled argument \`$deplib'" 1>&2
 	  exit $EXIT_FAILURE
 	fi
 
