* libltdl/m4/ltdl.m4 (LTDL_INIT) <CONFIG_H>: Rename to.. <LT_CONFIG_H>: this, to contain the name of the config header. * Makefile.am <DEFS>: Use it to define LT_CONFIG_H. * HACKING, libltdl/argz.c, libltdl/lt__alloc.c, libltdl/libltdl/lt__dirent.h, libltdl/libltdl/lt__glibc.h, libltdl/libltdl/lt__private.h, libltdl/libltdl/lt__strl.h: Adjusted.

--- a/Makefile.am
+++ b/Makefile.am
@@ -223,7 +223,7 @@ $(srcdir)/libltdl/Makefile.in: libltdl/Makefile.am
 
 # %%% BEGIN libltdl/Makefile.am
 
-DEFS			= -DHAVE_CONFIG_H="<$(CONFIG_H)>" -DLTDL
+DEFS			= -DLTDL -DHAVE_CONFIG_H -DLT_CONFIG_H='<$(LT_CONFIG_H)>'
 
 # -I$(srcdir) is needed for user that built libltdl with a sub-Automake
 # (not as a sub-package!) using 'nostdinc':
